yaml-for-deployment/liberty-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openliberty-system-microservice
  name: openliberty-system-microservice
spec:
  clusterIP: 172.21.90.133
  ports:
  - name: 9080-tcp
    port: 9080
    protocol: TCP
    targetPort: 9080
  - name: 9443-tcp
    port: 9443
    protocol: TCP
    targetPort: 9443
  selector:
    app: randy-images
    deploymentconfig: randy-images
  sessionAffinity: None
  type: ClusterIP
