yaml-for-deployment/liberty-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: openliberty-system-microservice
  name: liberty-system-microservice-route
spec:
  host: 
  path: /dev/
  port:
    targetPort: 9081-tcp
  to:
    kind: Service
    name: openliberty-system-microservice
    weight: 100
  wildcardPolicy: None
